update:MICRO_TASK_C01_C02.md chapter 1 code practice